--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\Nomi.png" alt="">
+                    <img class="img-fluid rounded w-100" src="Nomi.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Web Developer, Digital Marketer & SEO(Search Engine Optimization) Expert</h3>
