--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" style="background-color: #97CADB;" src="e:\My All Work\freelancer-portfolio-template\Nomi Profile pic.png" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" style="background-color: #97CADB;" src="Nomi Profile pic.png" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
@@ -352,7 +352,7 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\pic4.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\pic4.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://healthaxis.pk" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\pIc2.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\pIc2.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href='https://snipbyte.github.io/blue-gradient-e-commerce-landing-page/' target="_blank">
                                 <i class='fa fa-plus text-white' style='font-size: 60px;'></i>
@@ -374,7 +374,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\pic3.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\pic3.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://shezanbakers.pk/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -384,7 +384,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\celebrity portfolio website template using html css bootstrap and js (1).webp" alt="">
+                        <img class="img-fluid rounded w-100" src="img\celebrity portfolio website template using html css bootstrap and js (1).webp" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://snipbyte.github.io/celebrity-portfolio/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -394,7 +394,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\image3.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\image3.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/portfolio-5.jpg" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -404,7 +404,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\image4.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\image4.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://snipbyte.github.io/e-commerce-landing-page/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -426,7 +426,7 @@
 
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\sumaidpharma (1).png">
+                        <img class="img-fluid rounded w-100" src="img\sumaidpharma (1).png">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://sumaidpharmachem.com/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -437,7 +437,7 @@
 
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\sumaidpharma (2).png" alt="">
+                        <img class="img-fluid rounded w-100" src="img\sumaidpharma (2).png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://letsfind.pk/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -501,7 +501,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\aerial-view-man-using-computer-laptop-wooden-table.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img\aerial-view-man-using-computer-laptop-wooden-table.jpg" alt="">
                         <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">01</h4>
                             <small class="text-jan text-uppercase">Jan</small>
@@ -512,7 +512,7 @@
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\overhead-view-businesswoman-working-computer-office-place-your-text-ideal-blog-flat-lay-white-background.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img\overhead-view-businesswoman-working-computer-office-place-your-text-ideal-blog-flat-lay-white-background.jpg" alt="">
                         <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">17</h4>
                             <small class="text-jan text-uppercase">Jun</small>
@@ -523,7 +523,7 @@
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="e:\My All Work\freelancer-portfolio-template\img\top-view-young-female-freelancer-working-indoors-office-daytime-laptop-notepad.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img\top-view-young-female-freelancer-working-indoors-office-daytime-laptop-notepad.jpg" alt="">
                         <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">09</h4>
                             <small class="text-jan text-uppercase">Feb</small>
