--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Developer, Digital Marketer, SEO(Search Engine Optimization), wordpress Web Development</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="img/Resume nomi.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="img/nomi-resume.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="video.mp4" data-target="#videoModal">
                             <span></span>
