--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="Img/e-commerce.png" alt="">
+                        <img class="img-fluid rounded w-100" src="e-commerce.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://snipbyte.github.io/e-commerce-landing-page/" target="_blank">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
