--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     </div>
                 </div>
     
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item second">
+<!--                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/image3.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -404,7 +404,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
     
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
