--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="zon-cafe.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/zon-cafe.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href='https://nomi2374.github.io/zon/' target="_blank">
                                 <i class='fa fa-plus text-white' style='font-size: 60px;'></i>
