--- a/index.html
+++ b/index.html
@@ -373,12 +373,13 @@
                     </div>
                 </div>
     
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item third">
+
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/pic-2.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/pic-1.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="https://shezanbakers.pk/" target="_blank">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            <a href='https://snipbyte.github.io/blue-gradient-e-commerce-landing-page/' target="_blank">
+                                <i class='fa fa-plus text-white' style='font-size: 60px;'></i>
                             </a>
                         </div>
                     </div>
