--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://wa.me/923155065511" class="btn btn-outline-primary d-none d-lg-block" style="border-top-right-radius: 0;>Hire Me</a>
+            <a href="https://wa.me/923155065511" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
